--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -27,6 +27,10 @@ $mobile-portrait: "only screen and (min-device-width : 320px) and (max-device-wi
   margin: 0;
   padding: 0;
 }
+%titulos{
+  font-size: $font50;
+  font-weight: 300;
+}
 
 
 
@@ -34,11 +38,43 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	background-image: url(../img/fondo/hojas.png);
 }
+/* Preloader */
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  /* change if the mask should have another color then white */
+  z-index: 9999;
+  /* makes sure it stays on top */
+  #status {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 50%;
+    /* centers the loading animation horizontally one the screen */
+    top: 50%;
+    /* centers the loading animation vertically one the screen */
+    background-image: url(../img/loading/loading.gif);
+    /* path to your loading animation */
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: -100px 0 0 -100px;
+    /* is width and height divided by two */
+  }
+}
+
+
+// FIN CARGADOR
 
 .container-fluid.pag-home{
 	background-image: url(../img/fondo/shoes-fondo.jpg);
 	background-size: cover;
 	background-position: center;
+  background-attachment: fixed;
 	// height: 100%;
 	.col-xs-12.col-lg-12.caja-contenido{
 		position:absolute;
@@ -190,8 +226,7 @@ button.scroll_down:before {
 	height: 1000px;
 	margin: 150px 0 0 0;
 	h3.titulo-cursos.text-center{
-		font-size: $font50;
-		font-weight: 300;
+	 @extend %titulos;
 	}
 	hr#line-curso {
       margin: 20px auto 30px;
@@ -347,6 +382,59 @@ footer.container-fluid.footer{
     }
   }
 }
+// PAG FRANC
+.container.perfil{
+  .img_perfil{
+    width: 25%;
+    height: auto;
+    border-radius: 170px;
+    margin: 160px auto 0;
+  }
+  h3.titulo-perfil.text-center{
+    @extend %titulos;
+    margin-top: 50px;
+    margin-bottom: 80px;
+  }
+  p{
+    margin-bottom: 15px;
+    line-height: 1.3;
+  }
+  // PAG Q_S
+  img.img-responsive.img_perfil.marca{
+    width: 50%;
+    height: auto;
+    @extend %border0;
+
+  }
+}
+
+
+// PAG INFO 
+.container-fluid.conten-img{
+  @extend %reset;
+    .header-img{
+    height: 400px;
+    overflow: hidden;
+  @extend %reset;
+    img{
+    width: 100%;
+    height: auto;
+    }
+  }
+}
+.container.clases, .container.perfil{
+  margin-bottom: 90px;
+  h3.titulo-cursos.text-center{
+    @extend %titulos;
+    margin-top: 150px;
+    margin-bottom: 80px;
+  }
+  p{
+    margin-bottom: 15px;
+    line-height: 1.3;
+  }
+}
+
 
 
 
