--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ body {
     /* is width and height divided by two */ }
 
 .container-fluid.pag-home {
-  background-image: url(../img/fondo/shoes-fondo.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed; }
@@ -288,7 +287,8 @@ footer.container-fluid.footer {
     padding-left: 40px; }
     footer.container-fluid.footer .col-xs-6.col-sm-6.col-md-6.col-lg-6.info-direccion h3.direccion {
       color: #fff;
-      font-weight: 400; }
+      font-weight: 400;
+      line-height: 1.3; }
   footer.container-fluid.footer .col-xs-6.col-sm-6.col-md-6.col-lg-6.redes-social {
     padding-top: 40px;
     padding-left: 40px; }
