--- a/css/sidebar/sidebar-nav.css
+++ b/css/sidebar/sidebar-nav.css
@@ -144,7 +144,7 @@ and (max-device-width : 568px){
     /*z-index: 20;*/
     display: block;
     float: right;
-    background-color: red;
+    /*background-color: red;*/
 
 }
 
