--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@
   font-size: 50px;
   font-weight: 300; }
 
+.container-fluid.conten-img #franc, .container-fluid.conten-img #q-s {
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center -20%; }
+
 body {
   font-family: 'Open Sans', sans-serif;
   background-image: url(../img/fondo/hojas.png); }
@@ -135,9 +141,9 @@ button.scroll_down:before {
   #navbar-main .navbar-header {
     min-width: 250px; }
   #navbar-main.affix-top {
-    background-color: #000; }
+    background-color: #5A392B; }
   #navbar-main.affix {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(90, 57, 43, 0.5);
     top: 0;
     left: 0;
     right: 0; }
@@ -147,6 +153,12 @@ button.scroll_down:before {
     float: left; }
   #navbar-main .navbar-nav {
     margin: 0 auto; }
+    #navbar-main .navbar-nav li a {
+      color: #fff; }
+  #navbar-main .navbar-nav {
+    margin: 0 auto; }
+    #navbar-main .navbar-nav li a:hover {
+      color: #FFAC00 !important; }
 
 .navbar-brand {
   padding: 0;
@@ -157,6 +169,19 @@ button.scroll_down:before {
 
 .menu {
   display: none; }
+
+ul.dropdown-menu.dropdownhover-bottom {
+  background: rgba(90, 57, 43, 0.8);
+  margin-top: 4%; }
+  ul.dropdown-menu.dropdownhover-bottom li a:hover {
+    background-color: rgba(90, 57, 43, 0.8);
+    color: #FFAC00 !important; }
+
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover {
+  background-color: #5A392B;
+  color: #FFAC00 !important;
+  border-radius: 3px; }
 
 .col-xs-12.col-sm-12.col-md-12.col-lg-12.cursos {
   height: 1000px;
@@ -210,7 +235,7 @@ button.scroll_down:before {
           -webkit-transition: all 200ms ease;
           transition: all 200ms ease; }
           .accordion ul li div a * {
-            opacity: 0;
+            opacity: 0.4;
             margin: 0;
             width: 100%;
             text-overflow: ellipsis;
@@ -228,10 +253,13 @@ button.scroll_down:before {
             font-size: 24px;
             text-transform: uppercase;
             margin-bottom: 2px;
-            top: 160px; }
+            top: 160px;
+            text-align: center; }
           .accordion ul li div a p {
             top: 160px;
-            font-size: 13.5px; }
+            font-size: 13.5px;
+            opacity: 0;
+            text-align: center; }
 
 .accordion ul li:nth-child(1) {
   background-image: url("../img/fondo/be-be.jpg"); }
@@ -324,6 +352,12 @@ footer.container-fluid.footer {
     width: 100%;
     height: auto; }
 
+.container-fluid.conten-img #franc {
+  background-image: url(../img/fondo/img02.jpg); }
+
+.container-fluid.conten-img #q-s {
+  background-image: url(../img/fondo/img01.jpg); }
+
 .container.clases, .container.perfil {
   margin-bottom: 90px; }
   .container.clases h3.titulo-cursos.text-center, .container.perfil h3.titulo-cursos.text-center {
@@ -332,6 +366,29 @@ footer.container-fluid.footer {
   .container.clases p, .container.perfil p {
     margin-bottom: 15px;
     line-height: 1.3; }
+
+.formu {
+  width: 60%;
+  line-height: 1.5;
+  margin: 0 auto;
+  display: block; }
+
+button.submit {
+  margin: 2% auto;
+  display: block;
+  padding: 1.5% 6%;
+  border: 0;
+  color: #fff;
+  background-color: red;
+  border-radius: 5px; }
+
+.modal-header {
+  background-color: #6B4433; }
+  .modal-header h4.modal-title {
+    color: #fff; }
+
+.modal-body {
+  background-image: url(../img/fondo/hojas.png); }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: landscape) {
   .caja-contenido {
