--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,6 +10,8 @@ $font8:8px;
 // color
 $blanco:#fff;
 $negro:#000;
+$amarillo_pato:#FFAC00;
+$cafe_leche:#5A392B;
 
 // media query
 $tablet-landscape: "only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)";
@@ -31,6 +33,12 @@ $mobile-portrait: "only screen and (min-device-width : 320px) and (max-device-wi
   font-size: $font50;
   font-weight: 300;
 }
+%img-header{
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center -20%;
+}
 
 
 
@@ -46,7 +54,7 @@ body{
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #fff;
+  background-color: $blanco;
   /* change if the mask should have another color then white */
   z-index: 9999;
   /* makes sure it stays on top */
@@ -71,7 +79,7 @@ body{
 // FIN CARGADOR
 
 .container-fluid.pag-home{
-	// background-image: url(../img/fondo/shoes-fondo.jpg);
+	// background-image: url(../img/fondo/trama01.png);
 	background-size: cover;
 	background-position: center;
   background-attachment: fixed;
@@ -135,7 +143,7 @@ button.scroll_down:before {
   width: 6px;
   height: 6px;
   margin-left: -3px;
-  background-color: #fff;
+  background-color: $blanco;
   border-radius: 100%;
   -webkit-animation: scroll_down_btn-animation 2s infinite;
   animation: scroll_down_btn-animation 2s infinite;
@@ -189,12 +197,12 @@ button.scroll_down:before {
     min-width: 250px;
   }
   &.affix-top{
-    background-color: $negro;
+    background-color: #5A392B;
     @extend %border0;
   }
   /* Added `.affix` class css when the element is >= 170px (Look: line 8 html) */
   &.affix {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(90, 57, 43, 0.5);
     top: 0;
     left: 0;
     right: 0;
@@ -207,6 +215,19 @@ button.scroll_down:before {
   }
   .navbar-nav{
     margin: 0 auto;
+    li{
+      a{
+        color:$blanco;
+      }
+    }
+  }
+  .navbar-nav{
+    margin: 0 auto;
+    li{
+      a:hover{
+        color:$amarillo_pato !important;
+      }
+    }
   }
 }
 .navbar-brand{
@@ -219,6 +240,25 @@ button.scroll_down:before {
 }
 .menu {
     display: none;
+}
+
+//PESTAÑA MENU--------------------------------
+ul.dropdown-menu.dropdownhover-bottom {
+    background: rgba(90, 57, 43, 0.8);
+    margin-top: 4%;
+    li{
+      a:hover{
+          background-color:rgba(90, 57, 43, 0.8); 
+  color: $amarillo_pato !important;
+      }
+    }
+}
+
+.navbar-inverse .navbar-nav>.open>a,
+.navbar-inverse .navbar-nav>.open>a:hover{
+  background-color: $cafe_leche;
+  color:$amarillo_pato !important;
+  border-radius: 3px;
 }
 
 // Cursos
@@ -238,6 +278,7 @@ button.scroll_down:before {
 		font-size: $font16;
   }  
 }
+
 // acordion
 .accordion {
   width: 100%;
@@ -278,7 +319,7 @@ button.scroll_down:before {
           font-family: Open Sans, sans-serif;
           transition: all 200ms ease;
           * {
-            opacity: 0;
+            opacity: 0.4;
             margin: 0;
             width: 100%;
             text-overflow: ellipsis;
@@ -298,10 +339,13 @@ button.scroll_down:before {
             text-transform: uppercase;
             margin-bottom: 2px;
             top: 160px;
+            text-align: center;
           }
           p {
             top: 160px;
             font-size: 13.5px;
+            opacity: 0;
+            text-align: center;
           }
         }
       }
@@ -416,11 +460,19 @@ footer.container-fluid.footer{
     .header-img{
     height: 400px;
     overflow: hidden;
-  @extend %reset;
+    @extend %reset;
     img{
     width: 100%;
     height: auto;
     }
+  }
+  #franc{
+    background-image: url(../img/fondo/img02.jpg);
+    @extend %img-header;
+  }
+  #q-s{
+    background-image: url(../img/fondo/img01.jpg);
+    @extend %img-header;
   }
 }
 .container.clases, .container.perfil{
@@ -436,8 +488,33 @@ footer.container-fluid.footer{
   }
 }
 
+// FORMULARIO
 
-
+.formu {
+  width: 60%;
+  line-height: 1.5;
+  margin: 0 auto;
+  display: block;
+}
+button.submit {
+  margin: 2% auto;
+  display: block;
+  padding: 1.5% 6%;
+  border: 0;
+  color: $blanco;
+  background-color: red;
+  border-radius: 5px;
+}
+// MODAL
+.modal-header{
+  background-color: #6B4433;
+  h4.modal-title{
+    color:$blanco;
+  }
+}
+.modal-body{
+  background-image: url(../img/fondo/hojas.png);
+}
 
 
 
